
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
getrandom = { version = "0.2.2", features = ["custom"] }
borsh = "0.9.3"
borsh-derive = "0.10.0"
solana-program = "1.16.1"
spl-token-2022 = "0.6.1"
num-traits = "0.2.14"
spl-associated-token-account = { version = "2.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.16.1"
solana-sdk = "1.16.1"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
